fix: avoid content jumping by hover

--- a/src/assets/fonts/Montserrat/fonts.css
+++ b/src/assets/fonts/Montserrat/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Montserrat";
-  src: url("../Montserrat/Montserrat-Regular.ttf") format("ttf");
+  src: url("./Montserrat-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,8 +8,24 @@
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../Montserrat/Montserrat-SemiBold.ttf") format("ttf");
+  src: url("./Montserrat-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("./Montserrat-SemiBold.ttf") format("truetype");
   font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("./Montserrat-Bold.ttf") format("truetype");
+  font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
