--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -26,7 +26,7 @@
   font-size: 16px;
   line-height: 145%;
   font-weight: 400;
-  transition: font-weight, line-height .3s ease-in-out;
+  transition: font-weight .1s ease-in-out;
 }
 
 .footerSocialList {
@@ -46,6 +46,5 @@
 
   .footerLink:hover {
     font-weight: 600;
-    line-height: 114%;
   }
 }
