--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -90,7 +90,7 @@
   column-gap: 6px;
   align-items: center;
   border-radius: 40px;
-  font-family: Montserrat;
+  font-family: "Montserrat";
   color: var(--white);
   font-size: 16px;
   font-weight: 500;
