--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ html {
 
 body {
   height: 100%;
-  font-family: Montserrat, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
